// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HttpClient > with server > gets broker account info 1`] = `
{
  "affiliates": [
    {
      "account_id": "cFJjZKzA5rUTb9qkZMGfec7piCpiAQKr15B4nALzriMGQL8BE",
      "short_id": 1,
      "withdrawal_address": "0x9a449133c6a8b4e117840b69e2a1d43634f562d3",
    },
  ],
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 0n,
  "btc_vault_deposit_address": "tb1pqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqsn60vlk",
  "earned_fees": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 12369718n,
    },
    "Ethereum": {
      "ETH": 1485755635703031110n,
      "FLIP": 39432662616362382590n,
      "USDC": 1922285993n,
      "USDT": 729506182n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "estimated_redeemable_balance": 21031117317233135625n,
  "flip_balance": 21031117317233135625n,
  "role": "broker",
}
`;

exports[`HttpClient > with server > gets broker account info 2 1`] = `
{
  "affiliates": [],
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 0n,
  "earned_fees": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 12369718n,
    },
    "Ethereum": {
      "ETH": 1485755635703031110n,
      "FLIP": 39432662616362382590n,
      "USDC": 1922285993n,
      "USDT": 729506182n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "estimated_redeemable_balance": 21031117317233135625n,
  "flip_balance": 21031117317233135625n,
  "role": "broker",
}
`;

exports[`HttpClient > with server > gets delegator account info 1`] = `
{
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 0n,
  "estimated_redeemable_balance": 1000000000000000000000n,
  "flip_balance": 1000000000000000000000n,
  "role": "unregistered",
  "upcoming_delegation_status": {
    "bid": 1000000000000000000000n,
    "operator": "cFMjXCTxTHVkSqbKzeVwJ25TJxLqc1Vn9usPgUGmZhsyvHRQZ",
  },
}
`;

exports[`HttpClient > with server > gets delegator account info 2 1`] = `
{
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 1000000000000000000000n,
  "current_delegation_status": {
    "bid": 1000000000000000000000n,
    "operator": "cFMjXCTxTHVkSqbKzeVwJ25TJxLqc1Vn9usPgUGmZhsyvHRQZ",
  },
  "estimated_redeemable_balance": 0n,
  "flip_balance": 1000111787496577859564n,
  "role": "unregistered",
  "upcoming_delegation_status": {
    "bid": 1000000000000000000000n,
    "operator": "cFMjXCTxTHVkSqbKzeVwJ25TJxLqc1Vn9usPgUGmZhsyvHRQZ",
  },
}
`;

exports[`HttpClient > with server > gets lp account info 1`] = `
{
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 19842n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 0n,
  "boost_balances": {
    "Arbitrum": {
      "ETH": [],
      "USDC": [],
    },
    "Assethub": {
      "DOT": [],
      "USDC": [],
      "USDT": [],
    },
    "Bitcoin": {
      "BTC": [
        {
          "available_balance": 200000000n,
          "fee_tier": 5,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
        {
          "available_balance": 200000000n,
          "fee_tier": 10,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
        {
          "available_balance": 200000000n,
          "fee_tier": 30,
          "in_use_balance": 0n,
          "is_withdrawing": false,
          "total_balance": 200000000n,
        },
      ],
    },
    "Ethereum": {
      "ETH": [],
      "FLIP": [],
      "USDC": [],
      "USDT": [],
    },
    "Solana": {
      "SOL": [],
      "USDC": [],
    },
  },
  "collateral_balances": [],
  "earned_fees": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "estimated_redeemable_balance": 99999975540394000000n,
  "flip_balance": 99999975540394000000n,
  "lending_positions": [
    {
      "asset": "BTC",
      "available_amount": 200000000n,
      "chain": "Bitcoin",
      "total_amount": 200000000n,
    },
  ],
  "refund_addresses": {
    "Arbitrum": null,
    "Assethub": null,
    "Bitcoin": "bc1qqt3juqef9azhd0zeuamu9c30pg5xdllvmks2ja",
    "Ethereum": "0xacd7c0481fc71dce9e3e8bd4cca5828ce8302629",
    "Solana": "7zLEfU3nQKqnfrN2A5yNEiFd1Vt9D7maVaoSAV8invMT",
  },
  "role": "liquidity_provider",
  "vanity_name": "Chainflip Testnet LP BOOST",
}
`;

exports[`HttpClient > with server > gets lp total balances 1`] = `
{
  "Arbitrum": {
    "ETH": 0n,
    "USDC": 0n,
  },
  "Assethub": {
    "DOT": 0n,
    "USDC": 0n,
    "USDT": 0n,
  },
  "Bitcoin": {
    "BTC": 19842n,
  },
  "Ethereum": {
    "ETH": 0n,
    "FLIP": 0n,
    "USDC": 0n,
    "USDT": 0n,
  },
  "Solana": {
    "SOL": 0n,
    "USDC": 0n,
  },
}
`;

exports[`HttpClient > with server > gets pools orders 1`] = `
{
  "limit_orders": {
    "asks": [
      {
        "fees_earned": 0n,
        "id": "0",
        "lp": "cFLGvPhhrribWCx9id5kLVqwiFK4QiVNjQ6ViyaRFF2Nrgq7j",
        "original_sell_amount": 2645327689967594500n,
        "sell_amount": 2645327689967594500n,
        "tick": -193955,
        "type": "ask",
      },
    ],
    "bids": [
      {
        "fees_earned": 0n,
        "id": "1708299934639",
        "lp": "cFLvCBxThPho4LP8iSP54B1iHdEtJhTHniUW5yyNcwDBGSe1X",
        "original_sell_amount": 390425502n,
        "sell_amount": 390425502n,
        "tick": -196947,
        "type": "bid",
      },
    ],
  },
  "range_orders": [
    {
      "fees_earned": {
        "base": 35985487972100833n,
        "quote": 130011380n,
      },
      "id": "1",
      "liquidity": 4115587651042067n,
      "lp": "cFM63NFq2MiujSSXUz1AfZgb4aZrkv5aWggdLkyufyTcpkrf2",
      "range": {
        "end": -192004,
        "start": -198197,
      },
      "type": "range",
    },
  ],
}
`;

exports[`HttpClient > with server > gets unregistered account info 1`] = `
{
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 0n,
  "estimated_redeemable_balance": 0n,
  "flip_balance": 0n,
  "role": "unregistered",
}
`;

exports[`HttpClient > with server > gets validator account info 1`] = `
{
  "apy_bp": 970,
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 225033425976807428934928n,
  "bound_redeem_address": "0x9a449133c6a8b4e117840b69e2a1d43634f562d3",
  "estimated_redeemable_balance": 0n,
  "flip_balance": 252186205332783022058667n,
  "is_bidding": true,
  "is_current_authority": true,
  "is_current_backup": false,
  "is_online": true,
  "is_qualified": true,
  "keyholder_epochs": [
    197,
    198,
  ],
  "last_heartbeat": 2930096,
  "reputation_points": 2880,
  "restricted_balances": {},
  "role": "validator",
}
`;

exports[`HttpClient > with server > gets validator account info with an operator 1`] = `
{
  "apy_bp": 970,
  "asset_balances": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "bond": 225033425976807428934928n,
  "bound_redeem_address": "0x9a449133c6a8b4e117840b69e2a1d43634f562d3",
  "estimated_redeemable_balance": 0n,
  "flip_balance": 252186205332783022058667n,
  "is_bidding": true,
  "is_current_authority": true,
  "is_current_backup": false,
  "is_online": true,
  "is_qualified": true,
  "keyholder_epochs": [
    197,
    198,
  ],
  "last_heartbeat": 2930096,
  "operator": "cFM7AjUFjqtrRStbEuNRYzEpjAqKEWP3om8FydieAhbqpqRKz",
  "reputation_points": 2880,
  "restricted_balances": {},
  "role": "validator",
}
`;

exports[`HttpClient > with server > handles cf_auction_state 1`] = `
{
  "auction_size_range": [
    2,
    150,
  ],
  "current_epoch_started_at": 7062012,
  "epoch_duration_blocks": 1200,
  "min_active_bid": 34500394838834294080488n,
  "min_bid": 0n,
  "min_funding": 10000000000000000000n,
  "redemption_period_as_percentage": 50,
}
`;

exports[`HttpClient > with server > handles cf_authority_emission_per_block 1`] = `714660267981090180n`;

exports[`HttpClient > with server > handles cf_available_pools 1`] = `
[
  {
    "base": {
      "asset": "ETH",
      "chain": "Ethereum",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "USDC",
      "chain": "Arbitrum",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "USDC",
      "chain": "Solana",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "FLIP",
      "chain": "Ethereum",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "ETH",
      "chain": "Arbitrum",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "BTC",
      "chain": "Bitcoin",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "SOL",
      "chain": "Solana",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "USDT",
      "chain": "Ethereum",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "DOT",
      "chain": "Assethub",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "USDT",
      "chain": "Assethub",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
  {
    "base": {
      "asset": "USDC",
      "chain": "Assethub",
    },
    "quote": {
      "asset": "USDC",
      "chain": "Ethereum",
    },
  },
]
`;

exports[`HttpClient > with server > handles cf_boost_pools_depth 1`] = `
[
  {
    "asset": "BTC",
    "available_amount": 10021000n,
    "chain": "Bitcoin",
    "tier": 5,
  },
  {
    "asset": "BTC",
    "available_amount": 10000000n,
    "chain": "Bitcoin",
    "tier": 30,
  },
  {
    "asset": "BTC",
    "available_amount": 10000000n,
    "chain": "Bitcoin",
    "tier": 10,
  },
]
`;

exports[`HttpClient > with server > handles cf_environment 1`] = `
{
  "funding": {
    "minimum_funding_amount": 10000000000000000000n,
    "redemption_tax": 5000000000000000000n,
  },
  "ingress_egress": {
    "channel_opening_fees": {
      "Arbitrum": 0n,
      "Assethub": 0n,
      "Bitcoin": 0n,
      "Ethereum": 0n,
      "Solana": 0n,
    },
    "egress_fees": {
      "Arbitrum": {
        "ETH": 7998400000000n,
        "USDC": 9985n,
      },
      "Assethub": {
        "DOT": 0n,
        "USDC": 0n,
        "USDT": 0n,
      },
      "Bitcoin": {
        "BTC": 176n,
      },
      "Ethereum": {
        "ETH": 490000n,
        "FLIP": 0n,
        "USDC": 0n,
        "USDT": 0n,
      },
      "Solana": {
        "SOL": 176n,
        "USDC": 0n,
      },
    },
    "ingress_fees": {
      "Arbitrum": {
        "ETH": 5998800000000n,
        "USDC": 8987n,
      },
      "Assethub": {
        "DOT": 0n,
        "USDC": 0n,
        "USDT": 0n,
      },
      "Bitcoin": {
        "BTC": 78n,
      },
      "Ethereum": {
        "ETH": 350000n,
        "FLIP": 0n,
        "USDC": 0n,
        "USDT": 0n,
      },
      "Solana": {
        "SOL": 176n,
        "USDC": 0n,
      },
    },
    "minimum_deposit_amounts": {
      "Arbitrum": {
        "ETH": 0n,
        "USDC": 0n,
      },
      "Assethub": {
        "DOT": 0n,
        "USDC": 0n,
        "USDT": 0n,
      },
      "Bitcoin": {
        "BTC": 0n,
      },
      "Ethereum": {
        "ETH": 0n,
        "FLIP": 0n,
        "USDC": 0n,
        "USDT": 0n,
      },
      "Solana": {
        "SOL": 0n,
        "USDC": 0n,
      },
    },
    "minimum_egress_amounts": {
      "Arbitrum": {
        "ETH": 1n,
        "USDC": 1n,
      },
      "Assethub": {
        "DOT": 0n,
        "USDC": 0n,
        "USDT": 0n,
      },
      "Bitcoin": {
        "BTC": 600n,
      },
      "Ethereum": {
        "ETH": 1n,
        "FLIP": 1n,
        "USDC": 1n,
        "USDT": 1n,
      },
      "Solana": {
        "SOL": 1n,
        "USDC": 1n,
      },
    },
    "witness_safety_margins": {
      "Arbitrum": 1,
      "Assethub": null,
      "Bitcoin": 2,
      "Ethereum": 2,
      "Solana": 1,
    },
  },
  "pools": {
    "fees": {
      "Arbitrum": {
        "ETH": {
          "limit_order_fee_hundredth_pips": 20,
          "limit_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "limit_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 20,
          "range_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "range_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
        },
        "USDC": {
          "limit_order_fee_hundredth_pips": 20,
          "limit_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "limit_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 20,
          "range_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "range_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
        },
      },
      "Assethub": {
        "DOT": {
          "limit_order_fee_hundredth_pips": 0,
          "limit_order_total_fees_earned": {
            "base": "0x0",
            "quote": "0x0",
          },
          "limit_total_swap_inputs": {
            "base": "0x0",
            "quote": "0x0",
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 0,
          "range_order_total_fees_earned": {
            "base": "0x0",
            "quote": "0x0",
          },
          "range_total_swap_inputs": {
            "base": "0x0",
            "quote": "0x0",
          },
        },
        "USDC": {
          "limit_order_fee_hundredth_pips": 0,
          "limit_order_total_fees_earned": {
            "base": "0x0",
            "quote": "0x0",
          },
          "limit_total_swap_inputs": {
            "base": "0x0",
            "quote": "0x0",
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 0,
          "range_order_total_fees_earned": {
            "base": "0x0",
            "quote": "0x0",
          },
          "range_total_swap_inputs": {
            "base": "0x0",
            "quote": "0x0",
          },
        },
        "USDT": {
          "limit_order_fee_hundredth_pips": 0,
          "limit_order_total_fees_earned": {
            "base": "0x0",
            "quote": "0x0",
          },
          "limit_total_swap_inputs": {
            "base": "0x0",
            "quote": "0x0",
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 0,
          "range_order_total_fees_earned": {
            "base": "0x0",
            "quote": "0x0",
          },
          "range_total_swap_inputs": {
            "base": "0x0",
            "quote": "0x0",
          },
        },
      },
      "Bitcoin": {
        "BTC": {
          "limit_order_fee_hundredth_pips": 20,
          "limit_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "limit_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 20,
          "range_order_total_fees_earned": {
            "base": 180n,
            "quote": 19996n,
          },
          "range_total_swap_inputs": {
            "base": 8996618n,
            "quote": 999734320n,
          },
        },
      },
      "Ethereum": {
        "ETH": {
          "limit_order_fee_hundredth_pips": 20,
          "limit_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "limit_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 20,
          "range_order_total_fees_earned": {
            "base": 20199999999986n,
            "quote": 17964n,
          },
          "range_total_swap_inputs": {
            "base": 1009979799999300014n,
            "quote": 897936235n,
          },
        },
        "FLIP": {
          "limit_order_fee_hundredth_pips": 20,
          "limit_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "limit_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 20,
          "range_order_total_fees_earned": {
            "base": 1263n,
            "quote": 200n,
          },
          "range_total_swap_inputs": {
            "base": 63099596n,
            "quote": 9993489n,
          },
        },
        "USDT": {
          "limit_order_fee_hundredth_pips": 20,
          "limit_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "limit_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 20,
          "range_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "range_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
        },
      },
      "Solana": {
        "SOL": {
          "limit_order_fee_hundredth_pips": 20,
          "limit_order_total_fees_earned": {
            "base": 0n,
            "quote": 0n,
          },
          "limit_total_swap_inputs": {
            "base": 0n,
            "quote": 0n,
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 20,
          "range_order_total_fees_earned": {
            "base": 180n,
            "quote": 19996n,
          },
          "range_total_swap_inputs": {
            "base": 8996618n,
            "quote": 999734320n,
          },
        },
        "USDC": {
          "limit_order_fee_hundredth_pips": 0,
          "limit_order_total_fees_earned": {
            "base": "0x0",
            "quote": "0x0",
          },
          "limit_total_swap_inputs": {
            "base": "0x0",
            "quote": "0x0",
          },
          "quote_asset": {
            "asset": "USDC",
            "chain": "Ethereum",
          },
          "range_order_fee_hundredth_pips": 0,
          "range_order_total_fees_earned": {
            "base": "0x0",
            "quote": "0x0",
          },
          "range_total_swap_inputs": {
            "base": "0x0",
            "quote": "0x0",
          },
        },
      },
    },
  },
  "swapping": {
    "max_swap_request_duration_blocks": 14400,
    "max_swap_retry_duration_blocks": 600,
    "maximum_swap_amounts": {
      "Arbitrum": {
        "ETH": null,
        "USDC": null,
      },
      "Assethub": {
        "DOT": null,
        "USDC": null,
        "USDT": null,
      },
      "Bitcoin": {
        "BTC": null,
      },
      "Ethereum": {
        "ETH": 65536n,
        "FLIP": null,
        "USDC": null,
        "USDT": null,
      },
      "Solana": {
        "SOL": null,
        "USDC": null,
      },
    },
    "minimum_chunk_size": {
      "Arbitrum": {
        "ETH": 200000000000000000n,
        "USDC": 1000000000n,
      },
      "Assethub": {
        "DOT": 0n,
        "USDC": 0n,
        "USDT": 0n,
      },
      "Bitcoin": {
        "BTC": 2000000n,
      },
      "Ethereum": {
        "ETH": 200000000000000000n,
        "FLIP": 1000000000000000000000n,
        "USDC": 1000000000n,
        "USDT": 1000000000n,
      },
      "Solana": {
        "SOL": 5000000000n,
        "USDC": 1000000000n,
      },
    },
    "network_fee_hundredth_pips": 1000,
    "network_fees": {
      "internal_swap_network_fee": {
        "rates": {
          "Arbitrum": {
            "ETH": 0n,
            "USDC": 0n,
          },
          "Assethub": {
            "DOT": 0n,
            "USDC": 0n,
            "USDT": 0n,
          },
          "Bitcoin": {
            "BTC": 0n,
          },
          "Ethereum": {
            "ETH": 0n,
            "FLIP": 0n,
            "USDC": 0n,
            "USDT": 0n,
          },
          "Solana": {
            "SOL": 0n,
            "USDC": 0n,
          },
        },
        "standard_rate_and_minimum": {
          "minimum": 0n,
          "rate": 0n,
        },
      },
      "regular_network_fee": {
        "rates": {
          "Arbitrum": {
            "ETH": 0n,
            "USDC": 0n,
          },
          "Assethub": {
            "DOT": 0n,
            "USDC": 0n,
            "USDT": 0n,
          },
          "Bitcoin": {
            "BTC": 0n,
          },
          "Ethereum": {
            "ETH": 0n,
            "FLIP": 0n,
            "USDC": 0n,
            "USDT": 0n,
          },
          "Solana": {
            "SOL": 0n,
            "USDC": 0n,
          },
        },
        "standard_rate_and_minimum": {
          "minimum": 0n,
          "rate": 0n,
        },
      },
    },
    "swap_retry_delay_blocks": 5,
  },
}
`;

exports[`HttpClient > with server > handles cf_epoch_duration 1`] = `43200`;

exports[`HttpClient > with server > handles cf_flip_supply 1`] = `
{
  "offchainFunds": 1n,
  "totalIssuance": 0n,
}
`;

exports[`HttpClient > with server > handles cf_funding_environment 1`] = `
{
  "minimum_funding_amount": 10000000000000000000n,
  "redemption_tax": 5000000000000000000n,
}
`;

exports[`HttpClient > with server > handles cf_get_trading_strategies 1`] = `
[
  {
    "balance": [
      [
        {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        49949999997n,
      ],
      [
        {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        37295972067n,
      ],
    ],
    "lp_id": "cFL8fmgKZcchhtLagBH2GKfsuWxBqUaD5CYE1m7DFb8DBSLJ1",
    "strategy": {
      "TickZeroCentered": {
        "base_asset": {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        "spread_tick": 1,
      },
    },
    "strategy_id": "cFLR4dN8x2vz3Vbcye1wMJfikfFFuUT7M9DiY58W82bEqdgvX",
  },
  {
    "balance": [
      [
        {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        0n,
      ],
      [
        {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        23000000000n,
      ],
    ],
    "lp_id": "cFPdef3hF5zEwbWUG6ZaCJ3X7mTvEeAog7HxZ8QyFcCgDVGDM",
    "strategy": {
      "TickZeroCentered": {
        "base_asset": {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        "spread_tick": 1,
      },
    },
    "strategy_id": "cFJu7R6mEVwbkDJr9ttC1LwpqHmQH6GnmqSgY9trQvHvuBYwp",
  },
  {
    "balance": [
      [
        {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        0n,
      ],
      [
        {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        23000000000n,
      ],
    ],
    "lp_id": "cFJt3kyUdXvaoarfxJDLrFmHFqkXUgnVZ4zqqDLLTRjbJosmK",
    "strategy": {
      "SimpleBuySell": {
        "base_asset": {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        "buy_tick": -10,
        "sell_tick": 2,
      },
    },
    "strategy_id": "cFNz3kSjvCHubkrtfYtBkzY2WpACDmXqQ9YGxbMgRD2iu1LCc",
  },
  {
    "balance": [
      [
        {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        0n,
      ],
      [
        {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        23000000000n,
      ],
    ],
    "lp_id": "cFJt3kyUdXvaoarfxJDLrFmHFqkXUgnVZ4zqqDLLTRjbJosmK",
    "strategy": {
      "InventoryBased": {
        "base_asset": {
          "asset": "USDT",
          "chain": "Ethereum",
        },
        "max_buy_tick": -1,
        "max_sell_tick": 8,
        "min_buy_tick": -10,
        "min_sell_tick": 2,
      },
    },
    "strategy_id": "cFJr8vEYc1mr1CEsdRugUJqdyBnyNdq8idNFKmQ2AaYbDz1Zm",
  },
]
`;

exports[`HttpClient > with server > handles cf_get_trading_strategy_limits 1`] = `
{
  "minimum_added_funds_amount": {
    "Arbitrum": {
      "ETH": null,
      "USDC": 10000000,
    },
    "Assethub": {
      "DOT": null,
      "USDC": null,
      "USDT": null,
    },
    "Bitcoin": {
      "BTC": null,
    },
    "Ethereum": {
      "ETH": null,
      "FLIP": null,
      "USDC": 10000000,
      "USDT": 10000000,
    },
    "Solana": {
      "SOL": null,
      "USDC": 10000000,
    },
  },
  "minimum_deployment_amount": {
    "Arbitrum": {
      "ETH": null,
      "USDC": 20000000000,
    },
    "Assethub": {
      "DOT": null,
      "USDC": null,
      "USDT": null,
    },
    "Bitcoin": {
      "BTC": null,
    },
    "Ethereum": {
      "ETH": null,
      "FLIP": null,
      "USDC": 20000000000,
      "USDT": 20000000000,
    },
    "Solana": {
      "SOL": null,
      "USDC": 20000000000,
    },
  },
}
`;

exports[`HttpClient > with server > handles cf_get_vault_addresses 1`] = `
{
  "Arbitrum": "0x79001a5e762f3befc8e5871b42f6734e00498920",
  "Bitcoin": Map {
    "cFJZVRaybb2PBwxTiAiRLiQfHY4KPB3RpJK22Q7Fhqk979aCH" => {
      "current": "bc1pmlecg5qmnzamrkrkhzatr72mszkja2askkt2u8dwe2390v7rzuyqu4wrnx",
      "previous": "bc1pecgxz0ls3qs7wcvzf55sjzh4qljj5km35gl3gqlcse4lkxstvnhqsfle7s",
    },
    "cFKpid38PmmZ8V81AHaZAhHzzpRbsf7Xw5PYt5ajTXAUvHoTQ" => {
      "current": "bc1p395ptc97xyue0pe5x2zqk8lev2eduhevg06p6upzz2580358phnsyr40ak",
      "previous": "bc1p2ve7y0tsx4je6kqdpxgjxvqsgejuqpg0u9v3w87pz35lhvr00mjssx23p8",
    },
    "cFLRQDfEdmnv6d2XfHJNRBQHi4fruPMReLSfvB8WWD2ENbqj7" => {
      "current": "bc1p3jw7qhspcdgqv3mlfjtr476jg6lcwunc6eu2st5n8z0rxmr0st6qtljmuq",
      "previous": "bc1puhgd4r2ghhzn0hnre8lsmuljjd5xz9p2zj5evjdx2d36y92z32cqcrwe2q",
    },
    "cFNx21kQWmr9wsqq29zWM7RpDBKv4bctudEUE6J22Hd4NUUHR" => {
      "current": "bc1pssufxanrjd0cct8t2nj9wkh9epyw20zx8rjf6cckz90u3hjn5meqegud3x",
      "previous": "bc1pay0kxg22j5fjhtgrflx3txtyp98k6dp69n7cr7zgl5ewrcpmawjq6jvrnw",
    },
  },
  "Ethereum": "0xf5e10380213880111522dd0efd3dbb45b9f62bcc",
}
`;

exports[`HttpClient > with server > handles cf_ingress_egress_environment 1`] = `
{
  "channel_opening_fees": {
    "Arbitrum": 0n,
    "Assethub": 0n,
    "Bitcoin": 0n,
    "Ethereum": 0n,
    "Solana": 0n,
  },
  "egress_fees": {
    "Arbitrum": {
      "ETH": 7998400000000n,
      "USDC": 9985n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 176n,
    },
    "Ethereum": {
      "ETH": 490000n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 176n,
      "USDC": 0n,
    },
  },
  "ingress_fees": {
    "Arbitrum": {
      "ETH": 5998800000000n,
      "USDC": 8987n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 78n,
    },
    "Ethereum": {
      "ETH": 350000n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 176n,
      "USDC": 0n,
    },
  },
  "minimum_deposit_amounts": {
    "Arbitrum": {
      "ETH": 0n,
      "USDC": 0n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 0n,
    },
    "Ethereum": {
      "ETH": 0n,
      "FLIP": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Solana": {
      "SOL": 0n,
      "USDC": 0n,
    },
  },
  "minimum_egress_amounts": {
    "Arbitrum": {
      "ETH": 1n,
      "USDC": 1n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 600n,
    },
    "Ethereum": {
      "ETH": 1n,
      "FLIP": 1n,
      "USDC": 1n,
      "USDT": 1n,
    },
    "Solana": {
      "SOL": 1n,
      "USDC": 1n,
    },
  },
  "witness_safety_margins": {
    "Arbitrum": 1,
    "Assethub": null,
    "Bitcoin": 2,
    "Ethereum": 2,
    "Solana": 1,
  },
}
`;

exports[`HttpClient > with server > handles cf_lending_config 1`] = `
{
  "fee_swap_interval_blocks": 10,
  "fee_swap_max_oracle_slippage": 50,
  "fee_swap_threshold_usd": 20000000n,
  "hard_liquidation_max_oracle_slippage": 500,
  "hard_liquidation_swap_chunk_size_usd": 50000000000n,
  "interest_collection_threshold_usd": 100000n,
  "interest_payment_interval_blocks": 10,
  "ltv_thresholds": {
    "hard_liquidation": 950000,
    "hard_liquidation_abort": 930000,
    "low_ltv": 500000,
    "soft_liquidation": 900000,
    "soft_liquidation_abort": 880000,
    "target": 800000,
    "topup": null,
  },
  "minimum_loan_amount_usd": 100000000n,
  "minimum_supply_amount_usd": 100000000n,
  "minimum_update_collateral_amount_usd": 10000000n,
  "minimum_update_loan_amount_usd": 10000000n,
  "network_fee_contributions": {
    "extra_interest": 10000,
    "from_liquidation_fee": 200000,
    "from_origination_fee": 200000,
    "low_ltv_penalty_max": 10000,
  },
  "soft_liquidation_max_oracle_slippage": 50,
  "soft_liquidation_swap_chunk_size_usd": 10000000000n,
}
`;

exports[`HttpClient > with server > handles cf_lending_pool_supply_balances 1`] = `
[
  {
    "asset": "BTC",
    "chain": "Bitcoin",
    "positions": [
      {
        "lp_id": "cFKKYDgKLHgKRfHEwTPsGj2SJmmha5mGqajHEPXo1Chaqa96Q",
        "total_amount": 1999040000n,
      },
      {
        "lp_id": "cFL8fmgKZcchhtLagBH2GKfsuWxBqUaD5CYE1m7DFb8DBSLJ1",
        "total_amount": 200000000n,
      },
    ],
  },
  {
    "asset": "ETH",
    "chain": "Ethereum",
    "positions": [
      {
        "lp_id": "cFKKYDgKLHgKRfHEwTPsGj2SJmmha5mGqajHEPXo1Chaqa96Q",
        "total_amount": 100000000000000000000n,
      },
    ],
  },
  {
    "asset": "SOL",
    "chain": "Solana",
    "positions": [
      {
        "lp_id": "cFKKYDgKLHgKRfHEwTPsGj2SJmmha5mGqajHEPXo1Chaqa96Q",
        "total_amount": 100000000000n,
      },
    ],
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
    "positions": [
      {
        "lp_id": "cFKKYDgKLHgKRfHEwTPsGj2SJmmha5mGqajHEPXo1Chaqa96Q",
        "total_amount": 10000000000n,
      },
    ],
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
    "positions": [
      {
        "lp_id": "cFKKYDgKLHgKRfHEwTPsGj2SJmmha5mGqajHEPXo1Chaqa96Q",
        "total_amount": 10000096000n,
      },
    ],
  },
]
`;

exports[`HttpClient > with server > handles cf_lending_pools 1`] = `
[
  {
    "asset": {
      "asset": "BTC",
      "chain": "Bitcoin",
    },
    "available_amount": 200000000n,
    "current_interest_rate": 200,
    "interest_rate_curve": {
      "interest_at_junction_utilisation": 80000,
      "interest_at_max_utilisation": 500000,
      "interest_at_zero_utilisation": 20000,
      "junction_utilisation": 900000,
    },
    "liquidation_fee": 500,
    "origination_fee": 100,
    "total_amount": 200000000n,
    "utilisation_rate": 0,
  },
  {
    "asset": {
      "asset": "USDC",
      "chain": "Solana",
    },
    "available_amount": 0n,
    "current_interest_rate": 5000,
    "interest_rate_curve": {
      "interest_at_junction_utilisation": 80000,
      "interest_at_max_utilisation": 500000,
      "interest_at_zero_utilisation": 20000,
      "junction_utilisation": 900000,
    },
    "liquidation_fee": 500,
    "origination_fee": 100,
    "total_amount": 0n,
    "utilisation_rate": 10000,
  },
]
`;

exports[`HttpClient > with server > handles cf_loan_accounts 1`] = `
[
  {
    "account": "cFL8fmgKZcchhtLagBH2GKfsuWxBqUaD5CYE1m7DFb8DBSLJ1",
    "collateral": [
      {
        "amount": 3n,
        "asset": "BTC",
        "chain": "Bitcoin",
      },
    ],
    "liquidation_status": {
      "liquidation_swaps": [
        {
          "loan_id": 1,
          "swap_request_id": 1,
        },
      ],
      "liquidation_type": "Hard",
    },
    "loans": [
      {
        "asset": {
          "asset": "USDC",
          "chain": "Ethereum",
        },
        "loan_id": 1,
        "principal_amount": 1000n,
      },
    ],
    "ltv_ratio": 1333333333n,
    "primary_collateral_asset": {
      "asset": "BTC",
      "chain": "Bitcoin",
    },
  },
]
`;

exports[`HttpClient > with server > handles cf_safe_mode_statuses 1`] = `
{
  "asset_balances": {
    "reconciliation_enabled": true,
  },
  "broadcast_arbitrum": {
    "egress_witnessing_enabled": true,
    "retry_enabled": true,
  },
  "broadcast_assethub": {
    "egress_witnessing_enabled": true,
    "retry_enabled": true,
  },
  "broadcast_bitcoin": {
    "egress_witnessing_enabled": true,
    "retry_enabled": true,
  },
  "broadcast_ethereum": {
    "egress_witnessing_enabled": true,
    "retry_enabled": true,
  },
  "broadcast_polkadot": {
    "egress_witnessing_enabled": true,
    "retry_enabled": true,
  },
  "broadcast_solana": {
    "egress_witnessing_enabled": true,
    "retry_enabled": true,
  },
  "elections_generic": {
    "oracle_price_elections": true,
  },
  "emissions": {
    "emissions_sync_enabled": true,
  },
  "funding": {
    "redeem_enabled": true,
  },
  "ingress_egress_arbitrum": {
    "boost_deposits_enabled": true,
    "deposit_channel_creation_enabled": true,
    "deposit_channel_witnessing_enabled": true,
    "vault_deposit_witnessing_enabled": true,
  },
  "ingress_egress_assethub": {
    "boost_deposits_enabled": true,
    "deposit_channel_creation_enabled": true,
    "deposit_channel_witnessing_enabled": true,
    "vault_deposit_witnessing_enabled": true,
  },
  "ingress_egress_bitcoin": {
    "boost_deposits_enabled": true,
    "deposit_channel_creation_enabled": true,
    "deposit_channel_witnessing_enabled": true,
    "vault_deposit_witnessing_enabled": true,
  },
  "ingress_egress_ethereum": {
    "boost_deposits_enabled": true,
    "deposit_channel_creation_enabled": true,
    "deposit_channel_witnessing_enabled": true,
    "vault_deposit_witnessing_enabled": true,
  },
  "ingress_egress_polkadot": {
    "boost_deposits_enabled": true,
    "deposit_channel_creation_enabled": true,
    "deposit_channel_witnessing_enabled": true,
    "vault_deposit_witnessing_enabled": true,
  },
  "ingress_egress_solana": {
    "boost_deposits_enabled": true,
    "deposit_channel_creation_enabled": true,
    "deposit_channel_witnessing_enabled": true,
    "vault_deposit_witnessing_enabled": true,
  },
  "lending_pools": {
    "add_boost_funds_enabled": true,
    "stop_boosting_enabled": true,
  },
  "liquidity_provider": {
    "deposit_enabled": true,
    "internal_swaps_enabled": true,
    "withdrawal_enabled": true,
  },
  "pools": {
    "limit_order_update_enabled": true,
    "range_order_update_enabled": true,
  },
  "reputation": {
    "reporting_enabled": true,
  },
  "swapping": {
    "broker_registration_enabled": true,
    "swaps_enabled": true,
    "withdrawals_enabled": true,
  },
  "threshold_signature_bitcoin": {
    "slashing_enabled": true,
  },
  "threshold_signature_evm": {
    "slashing_enabled": true,
  },
  "threshold_signature_polkadot": {
    "slashing_enabled": true,
  },
  "threshold_signature_solana": {
    "slashing_enabled": true,
  },
  "trading_strategies": {
    "strategy_closure_enabled": true,
    "strategy_execution_enabled": true,
    "strategy_updates_enabled": true,
  },
  "validator": {
    "authority_rotation_enabled": true,
    "start_bidding_enabled": true,
    "stop_bidding_enabled": true,
  },
  "witnesser": "CodeGreen",
}
`;

exports[`HttpClient > with server > handles cf_supported_assets 1`] = `
[
  {
    "asset": "ETH",
    "chain": "Ethereum",
  },
  {
    "asset": "FLIP",
    "chain": "Ethereum",
  },
  {
    "asset": "USDC",
    "chain": "Ethereum",
  },
  {
    "asset": "USDT",
    "chain": "Ethereum",
  },
  {
    "asset": "BTC",
    "chain": "Bitcoin",
  },
  {
    "asset": "ETH",
    "chain": "Arbitrum",
  },
  {
    "asset": "USDC",
    "chain": "Arbitrum",
  },
  {
    "asset": "SOL",
    "chain": "Solana",
  },
  {
    "asset": "USDC",
    "chain": "Solana",
  },
]
`;

exports[`HttpClient > with server > handles cf_swapping_environment 1`] = `
{
  "max_swap_request_duration_blocks": 14400,
  "max_swap_retry_duration_blocks": 600,
  "maximum_swap_amounts": {
    "Arbitrum": {
      "ETH": null,
      "USDC": null,
    },
    "Assethub": {
      "DOT": null,
      "USDC": null,
      "USDT": null,
    },
    "Bitcoin": {
      "BTC": null,
    },
    "Ethereum": {
      "ETH": 65536n,
      "FLIP": null,
      "USDC": null,
      "USDT": null,
    },
    "Solana": {
      "SOL": null,
      "USDC": null,
    },
  },
  "minimum_chunk_size": {
    "Arbitrum": {
      "ETH": 200000000000000000n,
      "USDC": 1000000000n,
    },
    "Assethub": {
      "DOT": 0n,
      "USDC": 0n,
      "USDT": 0n,
    },
    "Bitcoin": {
      "BTC": 2000000n,
    },
    "Ethereum": {
      "ETH": 200000000000000000n,
      "FLIP": 1000000000000000000000n,
      "USDC": 1000000000n,
      "USDT": 1000000000n,
    },
    "Solana": {
      "SOL": 5000000000n,
      "USDC": 1000000000n,
    },
  },
  "network_fee_hundredth_pips": 1000,
  "network_fees": {
    "internal_swap_network_fee": {
      "rates": {
        "Arbitrum": {
          "ETH": 0n,
          "USDC": 0n,
        },
        "Assethub": {
          "DOT": 0n,
          "USDC": 0n,
          "USDT": 0n,
        },
        "Bitcoin": {
          "BTC": 0n,
        },
        "Ethereum": {
          "ETH": 0n,
          "FLIP": 0n,
          "USDC": 0n,
          "USDT": 0n,
        },
        "Solana": {
          "SOL": 0n,
          "USDC": 0n,
        },
      },
      "standard_rate_and_minimum": {
        "minimum": 0n,
        "rate": 0n,
      },
    },
    "regular_network_fee": {
      "rates": {
        "Arbitrum": {
          "ETH": 0n,
          "USDC": 0n,
        },
        "Assethub": {
          "DOT": 0n,
          "USDC": 0n,
          "USDT": 0n,
        },
        "Bitcoin": {
          "BTC": 0n,
        },
        "Ethereum": {
          "ETH": 0n,
          "FLIP": 0n,
          "USDC": 0n,
          "USDT": 0n,
        },
        "Solana": {
          "SOL": 0n,
          "USDC": 0n,
        },
      },
      "standard_rate_and_minimum": {
        "minimum": 0n,
        "rate": 0n,
      },
    },
  },
  "swap_retry_delay_blocks": 5,
}
`;

exports[`HttpClient > with server > handles chain_getBlockHash 1`] = `"0x5678"`;

exports[`HttpClient > with server > handles multiple requests separately if they are sent far apart 1`] = `
{
  "limit_orders": {
    "asks": [
      {
        "fees_earned": 0n,
        "id": "0",
        "lp": "cFLGvPhhrribWCx9id5kLVqwiFK4QiVNjQ6ViyaRFF2Nrgq7j",
        "original_sell_amount": 2645327689967594500n,
        "sell_amount": 2645327689967594500n,
        "tick": -193955,
        "type": "ask",
      },
    ],
    "bids": [
      {
        "fees_earned": 0n,
        "id": "1708299934639",
        "lp": "cFLvCBxThPho4LP8iSP54B1iHdEtJhTHniUW5yyNcwDBGSe1X",
        "original_sell_amount": 390425502n,
        "sell_amount": 390425502n,
        "tick": -196947,
        "type": "bid",
      },
    ],
  },
  "range_orders": [
    {
      "fees_earned": {
        "base": 35985487972100833n,
        "quote": 130011380n,
      },
      "id": "1",
      "liquidity": 4115587651042067n,
      "lp": "cFM63NFq2MiujSSXUz1AfZgb4aZrkv5aWggdLkyufyTcpkrf2",
      "range": {
        "end": -192004,
        "start": -198197,
      },
      "type": "range",
    },
  ],
}
`;

exports[`HttpClient > with server > handles multiple requests with 1 call 1`] = `
{
  "limit_orders": {
    "asks": [
      {
        "fees_earned": 0n,
        "id": "0",
        "lp": "cFLGvPhhrribWCx9id5kLVqwiFK4QiVNjQ6ViyaRFF2Nrgq7j",
        "original_sell_amount": 2645327689967594500n,
        "sell_amount": 2645327689967594500n,
        "tick": -193955,
        "type": "ask",
      },
    ],
    "bids": [
      {
        "fees_earned": 0n,
        "id": "1708299934639",
        "lp": "cFLvCBxThPho4LP8iSP54B1iHdEtJhTHniUW5yyNcwDBGSe1X",
        "original_sell_amount": 390425502n,
        "sell_amount": 390425502n,
        "tick": -196947,
        "type": "bid",
      },
    ],
  },
  "range_orders": [
    {
      "fees_earned": {
        "base": 35985487972100833n,
        "quote": 130011380n,
      },
      "id": "1",
      "liquidity": 4115587651042067n,
      "lp": "cFM63NFq2MiujSSXUz1AfZgb4aZrkv5aWggdLkyufyTcpkrf2",
      "range": {
        "end": -192004,
        "start": -198197,
      },
      "type": "range",
    },
  ],
}
`;

exports[`HttpClient > with server > handles state_getMetadata 1`] = `"0x1234"`;

exports[`HttpClient > with server > handles state_getRuntimeVersion 1`] = `
{
  "apis": [
    [
      "0xb7fb30db9d96703a",
      1,
    ],
    [
      "0xdf6acb689907609b",
      4,
    ],
    [
      "0x37e397fc7c91f5e4",
      2,
    ],
    [
      "0x40fe3ad401f8959a",
      6,
    ],
    [
      "0xd2bc9897eed08f15",
      3,
    ],
    [
      "0xf78b278be53f454c",
      2,
    ],
    [
      "0xdd718d5cc53262d4",
      1,
    ],
    [
      "0xab3c0572291feb8b",
      1,
    ],
    [
      "0xed99c5acb25eedf5",
      3,
    ],
    [
      "0xbc9d89904f5b923f",
      1,
    ],
    [
      "0x37c8bb1350a9a2a8",
      4,
    ],
    [
      "0xf3ff14d5ab527059",
      3,
    ],
    [
      "0xfbc577b9d747efd6",
      1,
    ],
  ],
  "authoringVersion": 1,
  "implName": "chainflip-node",
  "implVersion": 1,
  "specName": "chainflip-node",
  "specVersion": 141,
  "stateVersion": 1,
  "transactionVersion": 12,
}
`;
